tests/expected_invalid_parse_missing_call_type_argument_comma.diag.out
<input>:9:24: error: expected ',' between type arguments
        support::first<Int Text>(1, "two")
                           ^^^^
